cabal-version:      3.0
name:               hask-master
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             ussgarci
maintainer:         stevensantosgarcia@gmail.com
-- copyright:
category:           Productivity
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common base
  build-depends: base >=4.7 && <5

common containers
  build-depends: containers >=0.6.7 && <0.7

common mtl
  build-depends: mtl >=2.2.2 && <2.4

common text
  build-depends: text >= 2.0 && < 2.2 

common extra
  build-depends: extra >=1.8 && <1.9

common monad-loops
  build-depends: monad-loops == 0.4.3

common optparse-applicative
  build-depends: optparse-applicative >=0.16 && <0.19

common byline
  build-depends: byline >=1.1.3

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Task

    -- other-modules:
    -- other-extensions:
    build-depends:    
        base,
        text

    hs-source-dirs:   src
    default-language: Haskell2010

executable hask-master
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        hask-master

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hask-master-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        hask-master
