cabal-version:      3.0
name:               hask-master
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             ussgarci
maintainer:         stevensantosgarcia@gmail.com
-- copyright:
category:           Productivity
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common base
  build-depends: base >=4.7 && <5

common brick
  build-depends: brick >=2.1.1 && <2.5

common brick-list-skip
  build-depends: brick-list-skip >=0.1.1.2 && <0.2

common brick-tabular-list
  build-depends: brick-tabular-list >=2.2.0 && <2.2.1

common containers
  build-depends: containers >=0.6.7 && <0.7

common text
  build-depends: text >= 2.0 && < 2.2 

common extra
  build-depends: extra >=1.8 && <1.9

common microlens 
    build-depends: microlens ^>=0.4.13.1

common microlens-th
    build-depends: microlens-th ^>=0.4.3.14

common monad-loops
  build-depends: monad-loops == 0.4.3

common mtl
  build-depends: mtl >=2.2.2 && <2.4

common vector
  build-depends: vector >=0.12 && <0.14

common vty
  build-depends: vty >=6.1 && <6.3

common vty-crossplatform
  build-depends: vty-crossplatform >=0.4 && <0.5

common optparse-applicative
  build-depends: optparse-applicative >=0.16 && <0.19

common filepath
  build-depends: filepath >=1.4 && <1.6

common directory
  build-depends: directory >=1.3 && <1.4  

common aeson
  build-depends: aeson >=2.2 && <2.3

common bytestring
  build-depends: bytestring >=0.10 && <0.13

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Task,
        Timer

    -- other-modules:
    -- other-extensions:
    build-depends:    
        base,
        text,
        aeson

    hs-source-dirs:   src
    default-language: Haskell2010

executable hask-master
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        text,
        brick,
        containers,
        microlens,
        microlens-th,
        text,
        vty,
        vty-crossplatform,
        optparse-applicative,
        aeson,
        directory,
        bytestring,
        filepath,
        hask-master

    other-modules:
      Task,
      Timer,
      Command,
      Commands.Add,
      Commands.List

    hs-source-dirs:   
      app,
      src

    default-language: Haskell2010
    ghc-options:      -threaded 


test-suite hask-master-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        hask-master
